          unsuitable format.

        - The output of the 'status' and 'log' commands has changed to align
          with the new information displayed by 'commit' so that all three
          commands display revisions similarly.

        New features

        - New automation command 'update' which behaves identical to
          the normal 'update' command.

        - A new Lua extension function change_workspace(directory) has been
          added. This should be most useful for custom commands which need
          to work on multiple workspaces from the same monotone instance.

        - There is also the new server_set_listening(bool) Lua extention
          function available since 0.47, which can be used to let a monotone
          server exit gracefully instead of having to be killed.

        - Default include and exclude patterns are now remembered per server.
          This means that you can have for example one server that you sync
          everything to, and one that you only sync some branches to, and you
          don't have to worry about forgetting to give the include pattern and
          accidentally trying to sync everything to the second server.

        Bugs fixed

        - A regression in 0.47 prevent successful execution of push / pull /
          sync over pipes (Debian bug 574512); this has been fixed.

        - monotone no longer saves changed options from the command line back
          to _MTN/options in case the command execution was unsuccessful.

        - The 'log' command no longer crashes if it is executed in a workspace
          whose parent revision(s) do not exist in the specified database
          (fixes monotone bug #29677).

        - In 0.46, spurious network disconnects could occur when transferring
          sufficiently large items (files, diffs, revisions). This was fixed
          in 0.47 but not noted in the release notes at that time
          (fixes monotone bug #28991).
